--- a/05-intro-js/index.html
+++ b/05-intro-js/index.html
@@ -7,7 +7,7 @@
     <title>Lógica condicional</title>
 </head>
 <body>
-    <script>
+    <script src="logica condicional.js"></script>
         var a = 'tareaHecha';
         console.log(a);
     </script>
