--- a/05-intro-js/index.html
+++ b/05-intro-js/index.html
@@ -7,9 +7,11 @@
     <title>Lógica condicional</title>
 </head>
 <body>
-    <script src="logica condicional.js"></script>
-        var a = 'tareaHecha';
+    <script src="Tarea.js"></script>
+       <script>var a = 'tareaHecha';
         console.log(a);
     </script>
+
+</body>
 </body>
 </html>
