--- a/05-intro-js/index.html
+++ b/05-intro-js/index.html
@@ -7,10 +7,11 @@
     <title>Lógica condicional</title>
 </head>
 <body>
-    <script src="Tarea.js"></script>
-       <script>var a = 'tareaHecha';
+    <script src="Grados.js"></script>
+       <script>var a = 'temperatura';
         console.log(a);
     </script>
+
 
 </body>
 </body>
