--- a/05-intro-js/index.html
+++ b/05-intro-js/index.html
@@ -5,15 +5,43 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lógica condicional</title>
-
-    <script src="Grados.js"></script>
-    <script>var a = 'temperatura';
-     console.log(a);
- </script>
 </head>
+<body style="background-color:#84a5ee;"></body>
 <body>
-   
+   <div>
+    </div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <div align="center"><img src="pngegg.png"width="350"></div>
+    </div>
+    <div class="cuadrado"> <div align="center"><h1>Lógica condicional ejercicios</h1></div></div>
+<style>
+.cuadrado{
+padding: 19px;
+background-color: #3a46b4;
+color: rgb(3, 1, 36);
+}
+</style>
+<br>
 
+    
+    <div align="center"><a href="1 Ejercicio tarea.html"><button style="border-radius: 80px; width: 300px; height:60px; background-color: #3a46b4; border-color:#ffffff <button name="Ejercicio tarea">1. Ejercicio tarea</button> </a>
+   <br>
+    <br>
+   <div align="center"><a href="2 Ejerciciotemp.html"><button style="border-radius: 80px; width: 300px; height:60px; background-color: #3a46b4; border-color:#ffffff <button name="Ejercicio temperatura">2. Ejercicio temperatura</button> </a> 
+    <br>
+    <br>
+    <div align="center"><a href="3 ejercicioMayor.html"><button style="border-radius: 80px; width: 300px; height:60px; background-color: #3a46b4; border-color:#ffffff <button name="Ejercicio mayor">3. Ejercicio número mayor</button> </a> 
+<br>
+<br>
+
+        </script>
 
 </body>
 </body>
